renamed and modified complete project to app in public repo

--- a/project/static/styles/temp.css
+++ b/project/static/styles/temp.css
@@ -24,7 +24,7 @@ body{
   background-color: #4B0082;
   color: #FFFFFF;
 }
-.stc-logo {
+.logo {
   display:inline-block;
   margin-top: 5px;
   float: right;
